@@ -1,8 +1,6 @@
 package com.codeborne.selenide;
 
-import com.codeborne.selenide.collections.ExactTexts;
-import com.codeborne.selenide.collections.ListSize;
-import com.codeborne.selenide.collections.Texts;
+import com.codeborne.selenide.collections.*;
 import com.codeborne.selenide.impl.WebElementsCollection;
 import com.google.common.base.Predicate;
 import org.openqa.selenium.WebElement;
@@ -20,7 +18,27 @@ public abstract class CollectionCondition implements Predicate<List<WebElement>>
   public static CollectionCondition size(int expectedSize) {
     return new ListSize(expectedSize);
   }
-
+  
+  public static CollectionCondition sizeGreaterThan(int expectedSize) {
+    return new SizeGreaterThan(expectedSize);
+  }
+  
+  public static CollectionCondition sizeGreaterThanOrEqual(int expectedSize) {
+    return new SizeGreaterThanOrEqual(expectedSize);
+  }
+  
+  public static CollectionCondition sizeLessThan(int expectedSize) {
+    return new SizeLessThan(expectedSize);
+  }
+  
+  public static CollectionCondition sizeLessThanOrEqual(int size) {
+    return new SizeLessThanOrEqual(size);
+  }
+  
+  public static CollectionCondition sizeNotEqual(int expectedSize) {
+    return new SizeNotEqual(expectedSize);
+  }
+  
   /**
    * Checks that given collection has given texts (each collection element CONTAINS corresponding text)
    *
