@@ -8,9 +8,9 @@ import java.util.List;
 import static com.codeborne.selenide.ElementsCollection.elementsToString;
 
 public class ListSizeMismatch extends UIAssertionError {
-  public ListSizeMismatch(int expectedSize, WebElementsCollection collection, List<WebElement> actualElements,
+  public ListSizeMismatch(String operator, int expectedSize, WebElementsCollection collection, List<WebElement> actualElements,
                           Exception lastError, long timeoutMs) {
-    super(": expected: " + expectedSize +
+    super(": expected: " + operator + " " + expectedSize +
         ", actual: " + (actualElements == null ? 0 : actualElements.size()) +
         ", collection: " + collection.description() +
         "\nElements: " + elementsToString(actualElements), lastError
